k8s/test-deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app-ns

---
# HOME DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-deployment
  namespace: app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-page
  template:
    metadata:
      labels:
        app: home-page
    spec:
      containers:
      - name: home-container
        image: 379515516143.dkr.ecr.us-east-1.amazonaws.com/eks-repo:home
        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "256m"
            memory: "512Mi"
          limits:
            cpu: "512m"
            memory: "1Gi"

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5

---
# HOME SERVICE
apiVersion: v1
kind: Service
metadata:
  name: home-service
  namespace: app-ns
spec:
  selector:
    app: home-page
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP

---
# ABOUT DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: about-deployment
  namespace: app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: about-page
  template:
    metadata:
      labels:
        app: about-page
    spec:
      containers:
      - name: about-container
        image: 379515516143.dkr.ecr.us-east-1.amazonaws.com/eks-repo:about
        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "256m"
            memory: "512Mi"
          limits:
            cpu: "512m"
            memory: "1Gi"

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5

---
# ABOUT SERVICE
apiVersion: v1
kind: Service
metadata:
  name: about-service
  namespace: app-ns
spec:
  selector:
    app: about-page
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP

---
# INGRESS (ALB)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app-ns
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /about
        pathType: Prefix
        backend:
          service:
            name: about-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-service
            port:
              number: 80
